crops now effective with hoes, lang files made for crop block, allowed crops to be bonemealed

--- a/horde-resource-crops/src/main/resources/assets/horde-resource-crops/lang/en_us.json
+++ b/horde-resource-crops/src/main/resources/assets/horde-resource-crops/lang/en_us.json
@@ -4,7 +4,59 @@
   "itemGroup.horde-resource-crops.essence": "Unearthed Essences",
   "itemGroup.horde-resource-crops.seed": "Special Seeds",
   "itemGroup.horde-resource-crops.misc": "Scrapbox",
-  "comment1": "Seeds",
+  "comment1": "Crops",
+  "block.horde-resource-crops.vanilla.crop_rhodonite": "Rhodonite Seeds",
+  "block.horde-resource-crops.vanilla.crop_air": "Air Seeds",
+  "block.horde-resource-crops.vanilla.crop_earth": "Earth Seeds",
+  "block.horde-resource-crops.vanilla.crop_fire": "Fire Seeds",
+  "block.horde-resource-crops.vanilla.crop_water": "Water Seeds",
+  "block.horde-resource-crops.vanilla.crop_deepslate": "Deepslate Seeds",
+  "block.horde-resource-crops.vanilla.crop_dirt": "Dirt Seeds",
+  "block.horde-resource-crops.vanilla.crop_ice": "Ice Seeds",
+  "block.horde-resource-crops.vanilla.crop_stone": "Stone Seeds",
+  "block.horde-resource-crops.vanilla.crop_wood": "Wood Seeds",
+  "block.horde-resource-crops.vanilla.crop_amethyst": "Amethyst Seeds",
+  "block.horde-resource-crops.vanilla.crop_chicken": "Chicken Seeds",
+  "block.horde-resource-crops.vanilla.crop_coal": "Coal Seeds",
+  "block.horde-resource-crops.vanilla.crop_copper": "Copper Seeds",
+  "block.horde-resource-crops.vanilla.crop_cow": "Cow Seeds",
+  "block.horde-resource-crops.vanilla.crop_fish": "Fish Seeds",
+  "block.horde-resource-crops.vanilla.crop_iron": "Iron Seeds",
+  "block.horde-resource-crops.vanilla.crop_pig": "Pig Seeds",
+  "block.horde-resource-crops.vanilla.crop_coral": "Coral Seeds",
+  "block.horde-resource-crops.vanilla.crop_creeper": "Creeper Seeds",
+  "block.horde-resource-crops.vanilla.crop_honey": "Honey Seeds",
+  "block.horde-resource-crops.vanilla.crop_lapis": "Lapis Lazuli Seeds",
+  "block.horde-resource-crops.vanilla.crop_rabbit": "Rabbit Seeds",
+  "block.horde-resource-crops.vanilla.crop_sheep": "Sheep Seeds",
+  "block.horde-resource-crops.vanilla.crop_skeleton": "Skeleton Seeds",
+  "block.horde-resource-crops.vanilla.crop_slime": "Slime Seeds",
+  "block.horde-resource-crops.vanilla.crop_spider": "Spider Seeds",
+  "block.horde-resource-crops.vanilla.crop_squid": "Squid Seeds",
+  "block.horde-resource-crops.vanilla.crop_turtle": "Turtle Seeds",
+  "block.horde-resource-crops.vanilla.crop_zombie": "Zombie Seeds",
+  "block.horde-resource-crops.vanilla.crop_dye": "Dye Seeds",
+  "block.horde-resource-crops.vanilla.crop_emerald": "Emerald Seeds",
+  "block.horde-resource-crops.vanilla.crop_enderman": "Enderman Seeds",
+  "block.horde-resource-crops.vanilla.crop_experience": "Experience Seeds",
+  "block.horde-resource-crops.vanilla.crop_gold": "Gold Seeds",
+  "block.horde-resource-crops.vanilla.crop_nature": "Nature Seeds",
+  "block.horde-resource-crops.vanilla.crop_obsidian": "Obsidian Seeds",
+  "block.horde-resource-crops.vanilla.crop_prismarine": "Prismarine Seeds",
+  "block.horde-resource-crops.vanilla.crop_redstone": "Redstone Seeds",
+  "block.horde-resource-crops.vanilla.crop_blaze": "Blaze Seeds",
+  "block.horde-resource-crops.vanilla.crop_diamond": "Diamond Seeds",
+  "block.horde-resource-crops.vanilla.crop_end": "End Seeds",
+  "block.horde-resource-crops.vanilla.crop_ghast": "Ghast Seeds",
+  "block.horde-resource-crops.vanilla.crop_glowstone": "Glowstone Seeds",
+  "block.horde-resource-crops.vanilla.crop_nether": "Nether Seeds",
+  "block.horde-resource-crops.vanilla.crop_nether_quartz": "Nether Quartz Seeds",
+  "block.horde-resource-crops.vanilla.crop_wither_skeleton": "Wither Skeleton Seeds",
+  "block.horde-resource-crops.vanilla.crop_dragon_egg": "Dragon Egg Seeds",
+  "block.horde-resource-crops.vanilla.crop_nether_star": "Nether Star Seeds",
+  "block.horde-resource-crops.vanilla.crop_netherite": "Netherite Seeds",
+  "block.horde-resource-crops.vanilla.crop_shulker": "Shulker Seeds",
+  "comment2": "Seeds",
   "item.horde-resource-crops.vanilla.seed_bismuth": "Bismuth Seeds",
   "item.horde-resource-crops.vanilla.seed_dragonstone_overworld": "Dragonstone Seeds",
   "item.horde-resource-crops.vanilla.seed_dragonstone_nether": "Nether Dragonstone Seeds",
@@ -60,7 +112,7 @@
   "item.horde-resource-crops.vanilla.seed_nether_star": "Nether Star Seeds",
   "item.horde-resource-crops.vanilla.seed_netherite": "Netherite Seeds",
   "item.horde-resource-crops.vanilla.seed_shulker": "Shulker Seeds",
-  "comment2": "Essence",
+  "comment3": "Essence",
   "item.horde-resource-crops.vanilla.essence_bismuth": "Bismuth Essences",
   "item.horde-resource-crops.vanilla.essence_dragonstone_overworld": "Dragonstone Essences",
   "item.horde-resource-crops.vanilla.essence_dragonstone_nether": "Nether Dragonstone Essences",
@@ -116,7 +168,7 @@
   "item.horde-resource-crops.vanilla.essence_nether_star": "Nether Star Essences",
   "item.horde-resource-crops.vanilla.essence_netherite": "Netherite Essences",
   "item.horde-resource-crops.vanilla.essence_shulker": "Shulker Essences",
-  "comment3": "Mixes",
+  "comment4": "Mixes",
   "item.horde-resource-crops.vanilla.mix_chicken": "Chicken Mix",
   "item.horde-resource-crops.vanilla.mix_cow": "Cow Mix",
   "item.horde-resource-crops.vanilla.mix_enderman": "Enderman Mix",
@@ -135,7 +187,7 @@
   "item.horde-resource-crops.vanilla.mix_ghast": "Ghast Mix",
   "item.horde-resource-crops.vanilla.mix_wither_skeleton": "Wither Mix",
   "item.horde-resource-crops.vanilla.mix_shulker": "Shulker Mix",
-  "comment4": "Ore",
+  "comment5": "Ore",
   "item.horde-resource-crops.ores.raw_dragonstone_overworld": "Raw Dragonstone",
   "item.horde-resource-crops.ores.dragonstone_overworld": "Dragonstone",
   "item.horde-resource-crops.gemstones.dragonstone_overworld_diamond": "Dragonstone Gem",
@@ -173,13 +225,13 @@
   "item.horde-resource-crops.gemstones.larimar_diamond": "Larimar Gem",
   "item.horde-resource-crops.gemstones.chaorite": "Chaorite",
   "item.horde-resource-crops.gemstones.chaorite_diamond": "Chaorite Gem",
-  "comment5": "Shards",
+  "comment6": "Shards",
   "item.horde-resource-crops.shards.shard_dragon_egg": "Dragon Egg Shard",
   "item.horde-resource-crops.shards.shard_nether_star": "Nether Star Shard",
-  "comment6": "Catalysts",
+  "comment7": "Catalysts",
   "item.horde-resource-crops.gemstones.rhodonite_catalyst": "Rhodonite Catalyst",
   "item.horde-resource-crops.gemstones.larimar_catalyst": "Larimar Catalyst",
-  "comment7": "Extras",
+  "comment8:": "Extras",
   "item.horde-resource-crops.other.withered_bone": "Withered Bone",
   "item.horde-resource-crops.other.blank_disc": "Blank Disc"
 }
