--- a/horde-resource-crops/src/main/resources/assets/horde-resource-crops/lang/en_us.json
+++ b/horde-resource-crops/src/main/resources/assets/horde-resource-crops/lang/en_us.json
@@ -233,5 +233,6 @@
   "item.horde-resource-crops.gemstones.larimar_catalyst": "Larimar Catalyst",
   "comment8:": "Extras",
   "item.horde-resource-crops.other.withered_bone": "Withered Bone",
-  "item.horde-resource-crops.other.blank_disc": "Blank Disc"
+  "item.horde-resource-crops.other.blank_disc": "Blank Disc",
+  "comment9:": "Tooltips"
 }
