Shale bag (not so) secretly added

--- a/horde-backpack/src/main/resources/assets/horde-backpack/lang/en_us.json
+++ b/horde-backpack/src/main/resources/assets/horde-backpack/lang/en_us.json
@@ -7,6 +7,12 @@
   "item.horde-backpack.gold_backpack": "Gold Backpack",
   "item.horde-backpack.diamond_backpack": "Diamond Backpack",
   "item.horde-backpack.netherite_backpack": "Netherite Backpack",
+  "item.horde-backpack.shale_leather_backpack": "Leather Backpack",
+  "item.horde-backpack.shale_copper_backpack": "Copper Backpack",
+  "item.horde-backpack.shale_iron_backpack": "Iron Backpack",
+  "item.horde-backpack.shale_gold_backpack": "Gold Backpack",
+  "item.horde-backpack.shale_diamond_backpack": "Diamond Backpack",
+  "item.horde-backpack.shale_netherite_backpack": "Netherite Backpack",
 
   "item.horde-backpack.token_copper": "Copper Upgrade Token",
   "item.horde-backpack.token_iron": "Iron Upgrade Token",
