placeable item/block

--- a/horde-backpack/src/main/resources/assets/horde-backpack/lang/en_us.json
+++ b/horde-backpack/src/main/resources/assets/horde-backpack/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-
+  "itemGroup.horde-backpack.bag": "Bold Holding",
+  "item.horde-backpack.leather_backpack_item": "Leather Backpack",
+  "block.horde-backpack.leather_backpack_block": "Leather Backpack"
 }
