--- a/horde-backpack/src/main/resources/assets/horde-backpack/lang/en_us.json
+++ b/horde-backpack/src/main/resources/assets/horde-backpack/lang/en_us.json
@@ -1,15 +1,212 @@
 {
   "itemGroup.horde-backpack.bag": "Bold Holding",
   "item.horde-backpack.leather_backpack_item": "Leather Backpack",
+  "item.horde-backpack.leather_black_item": "Leather Backpack",
+  "item.horde-backpack.leather_blue_item": "Leather Backpack",
+  "item.horde-backpack.leather_brown_item": "Leather Backpack",
+  "item.horde-backpack.leather_cyan_item": "Leather Backpack",
+  "item.horde-backpack.leather_gray_item": "Leather Backpack",
+  "item.horde-backpack.leather_green_item": "Leather Backpack",
+  "item.horde-backpack.leather_light_blue_item": "Leather Backpack",
+  "item.horde-backpack.leather_light_gray_item": "Leather Backpack",
+  "item.horde-backpack.leather_lime_item": "Leather Backpack",
+  "item.horde-backpack.leather_magenta_item": "Leather Backpack",
+  "item.horde-backpack.leather_orange_item": "Leather Backpack",
+  "item.horde-backpack.leather_pink_item": "Leather Backpack",
+  "item.horde-backpack.leather_purple_item": "Leather Backpack",
+  "item.horde-backpack.leather_red_item": "Leather Backpack",
+  "item.horde-backpack.leather_white_item": "Leather Backpack",
+  "item.horde-backpack.leather_yellow_item": "Leather Backpack",
   "block.horde-backpack.leather_backpack_block": "Leather Backpack",
+  "block.horde-backpack.leather_black_block": "Leather Backpack",
+  "block.horde-backpack.leather_blue_block": "Leather Backpack",
+  "block.horde-backpack.leather_brown_block": "Leather Backpack",
+  "block.horde-backpack.leather_cyan_block": "Leather Backpack",
+  "block.horde-backpack.leather_gray_block": "Leather Backpack",
+  "block.horde-backpack.leather_green_block": "Leather Backpack",
+  "block.horde-backpack.leather_light_blue_block": "Leather Backpack",
+  "block.horde-backpack.leather_light_gray_block": "Leather Backpack",
+  "block.horde-backpack.leather_lime_block": "Leather Backpack",
+  "block.horde-backpack.leather_magenta_block": "Leather Backpack",
+  "block.horde-backpack.leather_orange_block": "Leather Backpack",
+  "block.horde-backpack.leather_pink_block": "Leather Backpack",
+  "block.horde-backpack.leather_purple_block": "Leather Backpack",
+  "block.horde-backpack.leather_red_block": "Leather Backpack",
+  "block.horde-backpack.leather_white_block": "Leather Backpack",
+  "block.horde-backpack.leather_yellow_block": "Leather Backpack",
+
   "item.horde-backpack.copper_backpack_item": "Copper Backpack",
+  "item.horde-backpack.copper_black_item": "Copper Backpack",
+  "item.horde-backpack.copper_blue_item": "Copper Backpack",
+  "item.horde-backpack.copper_brown_item": "Copper Backpack",
+  "item.horde-backpack.copper_cyan_item": "Copper Backpack",
+  "item.horde-backpack.copper_gray_item": "Copper Backpack",
+  "item.horde-backpack.copper_green_item": "Copper Backpack",
+  "item.horde-backpack.copper_light_blue_item": "Copper Backpack",
+  "item.horde-backpack.copper_light_gray_item": "Copper Backpack",
+  "item.horde-backpack.copper_lime_item": "Copper Backpack",
+  "item.horde-backpack.copper_magenta_item": "Copper Backpack",
+  "item.horde-backpack.copper_orange_item": "Copper Backpack",
+  "item.horde-backpack.copper_pink_item": "Copper Backpack",
+  "item.horde-backpack.copper_purple_item": "Copper Backpack",
+  "item.horde-backpack.copper_red_item": "Copper Backpack",
+  "item.horde-backpack.copper_white_item": "Copper Backpack",
+  "item.horde-backpack.copper_yellow_item": "Copper Backpack",
   "block.horde-backpack.copper_backpack_block": "Copper Backpack",
+  "block.horde-backpack.copper_black_block": "Copper Backpack",
+  "block.horde-backpack.copper_blue_block": "Copper Backpack",
+  "block.horde-backpack.copper_brown_block": "Copper Backpack",
+  "block.horde-backpack.copper_cyan_block": "Copper Backpack",
+  "block.horde-backpack.copper_gray_block": "Copper Backpack",
+  "block.horde-backpack.copper_green_block": "Copper Backpack",
+  "block.horde-backpack.copper_light_blue_block": "Copper Backpack",
+  "block.horde-backpack.copper_light_gray_block": "Copper Backpack",
+  "block.horde-backpack.copper_lime_block": "Copper Backpack",
+  "block.horde-backpack.copper_magenta_block": "Copper Backpack",
+  "block.horde-backpack.copper_orange_block": "Copper Backpack",
+  "block.horde-backpack.copper_pink_block": "Copper Backpack",
+  "block.horde-backpack.copper_purple_block": "Copper Backpack",
+  "block.horde-backpack.copper_red_block": "Copper Backpack",
+  "block.horde-backpack.copper_white_block": "Copper Backpack",
+  "block.horde-backpack.copper_yellow_block": "Copper Backpack",
+
   "item.horde-backpack.iron_backpack_item": "Iron Backpack",
+  "item.horde-backpack.iron_black_item": "Iron Backpack",
+  "item.horde-backpack.iron_blue_item": "Iron Backpack",
+  "item.horde-backpack.iron_brown_item": "Iron Backpack",
+  "item.horde-backpack.iron_cyan_item": "Iron Backpack",
+  "item.horde-backpack.iron_gray_item": "Iron Backpack",
+  "item.horde-backpack.iron_green_item": "Iron Backpack",
+  "item.horde-backpack.iron_light_blue_item": "Iron Backpack",
+  "item.horde-backpack.iron_light_gray_item": "Iron Backpack",
+  "item.horde-backpack.iron_lime_item": "Iron Backpack",
+  "item.horde-backpack.iron_magenta_item": "Iron Backpack",
+  "item.horde-backpack.iron_orange_item": "Iron Backpack",
+  "item.horde-backpack.iron_pink_item": "Iron Backpack",
+  "item.horde-backpack.iron_purple_item": "Iron Backpack",
+  "item.horde-backpack.iron_red_item": "Iron Backpack",
+  "item.horde-backpack.iron_white_item": "Iron Backpack",
+  "item.horde-backpack.iron_yellow_item": "Iron Backpack",
   "block.horde-backpack.iron_backpack_block": "Iron Backpack",
+  "block.horde-backpack.iron_black_block": "Iron Backpack",
+  "block.horde-backpack.iron_blue_block": "Iron Backpack",
+  "block.horde-backpack.iron_brown_block": "Iron Backpack",
+  "block.horde-backpack.iron_cyan_block": "Iron Backpack",
+  "block.horde-backpack.iron_gray_block": "Iron Backpack",
+  "block.horde-backpack.iron_green_block": "Iron Backpack",
+  "block.horde-backpack.iron_light_blue_block": "Iron Backpack",
+  "block.horde-backpack.iron_light_gray_block": "Iron Backpack",
+  "block.horde-backpack.iron_lime_block": "Iron Backpack",
+  "block.horde-backpack.iron_magenta_block": "Iron Backpack",
+  "block.horde-backpack.iron_orange_block": "Iron Backpack",
+  "block.horde-backpack.iron_pink_block": "Iron Backpack",
+  "block.horde-backpack.iron_purple_block": "Iron Backpack",
+  "block.horde-backpack.iron_red_block": "Iron Backpack",
+  "block.horde-backpack.iron_white_block": "Iron Backpack",
+  "block.horde-backpack.iron_yellow_block": "Iron Backpack",
+
   "item.horde-backpack.gold_backpack_item": "Gold Backpack",
+  "item.horde-backpack.gold_black_item": "Gold Backpack",
+  "item.horde-backpack.gold_blue_item": "Gold Backpack",
+  "item.horde-backpack.gold_brown_item": "Gold Backpack",
+  "item.horde-backpack.gold_cyan_item": "Gold Backpack",
+  "item.horde-backpack.gold_gray_item": "Gold Backpack",
+  "item.horde-backpack.gold_green_item": "Gold Backpack",
+  "item.horde-backpack.gold_light_blue_item": "Gold Backpack",
+  "item.horde-backpack.gold_light_gray_item": "Gold Backpack",
+  "item.horde-backpack.gold_lime_item": "Gold Backpack",
+  "item.horde-backpack.gold_magenta_item": "Gold Backpack",
+  "item.horde-backpack.gold_orange_item": "Gold Backpack",
+  "item.horde-backpack.gold_pink_item": "Gold Backpack",
+  "item.horde-backpack.gold_purple_item": "Gold Backpack",
+  "item.horde-backpack.gold_red_item": "Gold Backpack",
+  "item.horde-backpack.gold_white_item": "Gold Backpack",
+  "item.horde-backpack.gold_yellow_item": "Gold Backpack",
   "block.horde-backpack.gold_backpack_block": "Gold Backpack",
+  "block.horde-backpack.gold_black_block": "Gold Backpack",
+  "block.horde-backpack.gold_blue_block": "Gold Backpack",
+  "block.horde-backpack.gold_brown_block": "Gold Backpack",
+  "block.horde-backpack.gold_cyan_block": "Gold Backpack",
+  "block.horde-backpack.gold_gray_block": "Gold Backpack",
+  "block.horde-backpack.gold_green_block": "Gold Backpack",
+  "block.horde-backpack.gold_light_blue_block": "Gold Backpack",
+  "block.horde-backpack.gold_light_gray_block": "Gold Backpack",
+  "block.horde-backpack.gold_lime_block": "Gold Backpack",
+  "block.horde-backpack.gold_magenta_block": "Gold Backpack",
+  "block.horde-backpack.gold_orange_block": "Gold Backpack",
+  "block.horde-backpack.gold_pink_block": "Gold Backpack",
+  "block.horde-backpack.gold_purple_block": "Gold Backpack",
+  "block.horde-backpack.gold_red_block": "Gold Backpack",
+  "block.horde-backpack.gold_white_block": "Gold Backpack",
+  "block.horde-backpack.gold_yellow_block": "Gold Backpack",
+
   "item.horde-backpack.diamond_backpack_item": "Diamond Backpack",
+  "item.horde-backpack.diamond_black_item": "Diamond Backpack",
+  "item.horde-backpack.diamond_blue_item": "Diamond Backpack",
+  "item.horde-backpack.diamond_brown_item": "Diamond Backpack",
+  "item.horde-backpack.diamond_cyan_item": "Diamond Backpack",
+  "item.horde-backpack.diamond_gray_item": "Diamond Backpack",
+  "item.horde-backpack.diamond_green_item": "Diamond Backpack",
+  "item.horde-backpack.diamond_light_blue_item": "Diamond Backpack",
+  "item.horde-backpack.diamond_light_gray_item": "Diamond Backpack",
+  "item.horde-backpack.diamond_lime_item": "Diamond Backpack",
+  "item.horde-backpack.diamond_magenta_item": "Diamond Backpack",
+  "item.horde-backpack.diamond_orange_item": "Diamond Backpack",
+  "item.horde-backpack.diamond_pink_item": "Diamond Backpack",
+  "item.horde-backpack.diamond_purple_item": "Diamond Backpack",
+  "item.horde-backpack.diamond_red_item": "Diamond Backpack",
+  "item.horde-backpack.diamond_white_item": "Diamond Backpack",
+  "item.horde-backpack.diamond_yellow_item": "Diamond Backpack",
   "block.horde-backpack.diamond_backpack_block": "Diamond Backpack",
+  "block.horde-backpack.diamond_black_block": "Diamond Backpack",
+  "block.horde-backpack.diamond_blue_block": "Diamond Backpack",
+  "block.horde-backpack.diamond_brown_block": "Diamond Backpack",
+  "block.horde-backpack.diamond_cyan_block": "Diamond Backpack",
+  "block.horde-backpack.diamond_gray_block": "Diamond Backpack",
+  "block.horde-backpack.diamond_green_block": "Diamond Backpack",
+  "block.horde-backpack.diamond_light_blue_block": "Diamond Backpack",
+  "block.horde-backpack.diamond_light_gray_block": "Diamond Backpack",
+  "block.horde-backpack.diamond_lime_block": "Diamond Backpack",
+  "block.horde-backpack.diamond_magenta_block": "Diamond Backpack",
+  "block.horde-backpack.diamond_orange_block": "Diamond Backpack",
+  "block.horde-backpack.diamond_pink_block": "Diamond Backpack",
+  "block.horde-backpack.diamond_purple_block": "Diamond Backpack",
+  "block.horde-backpack.diamond_red_block": "Diamond Backpack",
+  "block.horde-backpack.diamond_white_block": "Diamond Backpack",
+  "block.horde-backpack.diamond_yellow_block": "Diamond Backpack",
+
   "item.horde-backpack.netherite_backpack_item": "Netherite Backpack",
-  "block.horde-backpack.netherite_backpack_block": "Netherite Backpack"
+  "item.horde-backpack.netherite_black_item": "Netherite Backpack",
+  "item.horde-backpack.netherite_blue_item": "Netherite Backpack",
+  "item.horde-backpack.netherite_brown_item": "Netherite Backpack",
+  "item.horde-backpack.netherite_cyan_item": "Netherite Backpack",
+  "item.horde-backpack.netherite_gray_item": "Netherite Backpack",
+  "item.horde-backpack.netherite_green_item": "Netherite Backpack",
+  "item.horde-backpack.netherite_light_blue_item": "Netherite Backpack",
+  "item.horde-backpack.netherite_light_gray_item": "Netherite Backpack",
+  "item.horde-backpack.netherite_lime_item": "Netherite Backpack",
+  "item.horde-backpack.netherite_magenta_item": "Netherite Backpack",
+  "item.horde-backpack.netherite_orange_item": "Netherite Backpack",
+  "item.horde-backpack.netherite_pink_item": "Netherite Backpack",
+  "item.horde-backpack.netherite_purple_item": "Netherite Backpack",
+  "item.horde-backpack.netherite_red_item": "Netherite Backpack",
+  "item.horde-backpack.netherite_white_item": "Netherite Backpack",
+  "item.horde-backpack.netherite_yellow_item": "Netherite Backpack",
+  "block.horde-backpack.netherite_backpack_block": "Netherite Backpack",
+  "block.horde-backpack.netherite_black_block": "Netherite Backpack",
+  "block.horde-backpack.netherite_blue_block": "Netherite Backpack",
+  "block.horde-backpack.netherite_brown_block": "Netherite Backpack",
+  "block.horde-backpack.netherite_cyan_block": "Netherite Backpack",
+  "block.horde-backpack.netherite_gray_block": "Netherite Backpack",
+  "block.horde-backpack.netherite_green_block": "Netherite Backpack",
+  "block.horde-backpack.netherite_light_blue_block": "Netherite Backpack",
+  "block.horde-backpack.netherite_light_gray_block": "Netherite Backpack",
+  "block.horde-backpack.netherite_lime_block": "Netherite Backpack",
+  "block.horde-backpack.netherite_magenta_block": "Netherite Backpack",
+  "block.horde-backpack.netherite_orange_block": "Netherite Backpack",
+  "block.horde-backpack.netherite_pink_block": "Netherite Backpack",
+  "block.horde-backpack.netherite_purple_block": "Netherite Backpack",
+  "block.horde-backpack.netherite_red_block": "Netherite Backpack",
+  "block.horde-backpack.netherite_white_block": "Netherite Backpack",
+  "block.horde-backpack.netherite_yellow_block": "Netherite Backpack"
 }
