compressing and decompressing gemstones begining seed recycler entity

--- a/horde-resource-crops/src/main/resources/assets/horde-resource-crops/lang/en_us.json
+++ b/horde-resource-crops/src/main/resources/assets/horde-resource-crops/lang/en_us.json
@@ -301,19 +301,23 @@
   "item.horde-resource-crops.gemstones.dragonstone_overworld_diamond": "Dragonstone Gem",
   "block.horde-resource-crops.ores.dragonstone_overworld_ore": "Dragonstone Ore",
   "block.horde-resource-crops.ores.dragonstone_deepslate_ore": "Dragonstone Ore",
+  "block.horde-resource-crops.compressed.dragonstone_overworld_block": "Dragonstone Block",
   "item.horde-resource-crops.ores.raw_dragonstone_nether": "Raw Nether Dragonstone",
   "item.horde-resource-crops.ores.dragonstone_nether": "Nether Dragonstone",
   "item.horde-resource-crops.gemstones.dragonstone_nether_diamond": "Nether Dragonstone Gem",
   "block.horde-resource-crops.ores.dragonstone_nether_ore": "Nether Dragonstone Ore",
+  "block.horde-resource-crops.compressed.dragonstone_nether_block": "Nether Dragonstone Block",
   "item.horde-resource-crops.ores.raw_dragonstone_end": "Raw End Dragonstone",
   "item.horde-resource-crops.ores.dragonstone_end": "End Dragonstone",
   "item.horde-resource-crops.gemstones.dragonstone_end_diamond": "End Dragonstone Gem",
   "block.horde-resource-crops.ores.dragonstone_end_ore": "End Dragonstone Ore",
+  "block.horde-resource-crops.compressed.dragonstone_end_block": "End Dragonstone Block",
   "item.horde-resource-crops.ores.raw_bismuth": "Raw Bismuth",
   "item.horde-resource-crops.ores.bismuth": "Bismuth",
   "item.horde-resource-crops.gemstones.bismuth_diamond": "Bismuth Gem",
   "block.horde-resource-crops.ores.bismuth_basalt": "Bismuth Ore",
   "block.horde-resource-crops.ores.bismuth_blackstone": "Bismuth Ore",
+  "block.horde-resource-crops.compressed.bismuth_block": "Bismuth Block",
   "item.horde-resource-crops.ores.raw_rhodonite": "Raw Rhodonite",
   "item.horde-resource-crops.gemstones.rhodonite": "Rhodonite",
   "item.horde-resource-crops.gemstones.rhodonite_diamond": "Rhodonite Gem",
@@ -321,18 +325,25 @@
   "block.horde-resource-crops.ores.rhodonite_deepslate_ore": "Rhodonite Ore",
   "block.horde-resource-crops.ores.rhodonite_nether_ore": "Rhodonite Ore",
   "block.horde-resource-crops.ores.rhodonite_end_ore": "Rhodonite Ore",
+  "block.horde-resource-crops.compressed.rhodonite_block": "Rhodonite Block",
   "item.horde-resource-crops.gemstones.bloodstone": "Bloodstone",
   "item.horde-resource-crops.gemstones.bloodstone_diamond": "Bloodstone Gem",
+  "block.horde-resource-crops.compressed.bloodstone_block": "Bloodstone Block",
   "item.horde-resource-crops.gemstones.aventurine": "Aventurine",
   "item.horde-resource-crops.gemstones.aventurine_diamond": "Aventurine Gem",
+  "block.horde-resource-crops.compressed.aventurine_block": "Aventurine Block",
   "item.horde-resource-crops.gemstones.aragonite": "Aragonite",
   "item.horde-resource-crops.gemstones.aragonite_diamond": "Aragonite Gem",
+  "block.horde-resource-crops.compressed.aragonite_block": "Aragonite Block",
   "item.horde-resource-crops.gemstones.spinel": "Spinel",
   "item.horde-resource-crops.gemstones.spinel_diamond": "Spinel Gem",
+  "block.horde-resource-crops.compressed.spinel_block": "Spinel Block",
   "item.horde-resource-crops.gemstones.larimar": "Larimar",
   "item.horde-resource-crops.gemstones.larimar_diamond": "Larimar Gem",
-  "item.horde-resource-crops.gemstones.chaorite": "Chaorite",
-  "item.horde-resource-crops.gemstones.chaorite_diamond": "Chaorite Gem",
+  "block.horde-resource-crops.compressed.larimar_block": "Larimar Block",
+  "item.horde-resource-crops.gemstones.chaorite": "Charoite",
+  "item.horde-resource-crops.gemstones.chaorite_diamond": "Charoite Gem",
+  "block.horde-resource-crops.compressed.charoite_block": "Charoite Block",
   "comment6": "Shards",
   "item.horde-resource-crops.shards.shard_dragon_egg": "Dragon Egg Shard",
   "item.horde-resource-crops.shards.shard_nether_star": "Nether Star Shard",
