add gobber2 seeds and essence

--- a/horde-resource-crops/src/main/resources/assets/horde-resource-crops/lang/en_us.json
+++ b/horde-resource-crops/src/main/resources/assets/horde-resource-crops/lang/en_us.json
@@ -92,6 +92,9 @@
   "block.horde-resource-crops.modded.crop_aeternium": "Aeternium Crop",
   "block.horde-resource-crops.modded.crop_refined_radiance": "Refined Radiance Crop",
   "block.horde-resource-crops.modded.crop_shadow_steel": "Shadow Steel Crop",
+  "block.horde-resource-crops.modded.crop_gobber": "Gobber Crop",
+  "block.horde-resource-crops.modded.crop_gobber_end": "End Gobber Crop",
+  "block.horde-resource-crops.modded.crop_gobber_nether": "Nether Gobber Crop",
   "comment2": "Seeds",
   "item.horde-resource-crops.vanilla.seed_bismuth": "Bismuth Seeds",
   "item.horde-resource-crops.vanilla.seed_dragonstone_overworld": "Dragonstone Seeds",
@@ -184,6 +187,9 @@
   "item.horde-resource-crops.modded.seed_aeternium": "Aeternium Seeds",
   "item.horde-resource-crops.modded.seed_refined_radiance": "Refined Radiance Seeds",
   "item.horde-resource-crops.modded.seed_shadow_steel": "Shadow Steel Seeds",
+  "item.horde-resource-crops.modded.seed_gobber": "Gobber Seeds",
+  "item.horde-resource-crops.modded.seed_gobber_end": "End Gobber Seeds",
+  "item.horde-resource-crops.modded.seed_gobber_nether": "Nether Gobber Seeds",
   "comment3": "Essence",
   "item.horde-resource-crops.vanilla.essence_bismuth": "Bismuth Essences",
   "item.horde-resource-crops.vanilla.essence_dragonstone_overworld": "Dragonstone Essences",
@@ -276,6 +282,9 @@
   "item.horde-resource-crops.modded.essence_aeternium": "Aeternium Essence",
   "item.horde-resource-crops.modded.essence_refined_radiance": "Refined Radiance Essence",
   "item.horde-resource-crops.modded.essence_shadow_steel": "Shadow Steel Essence",
+  "item.horde-resource-crops.modded.essence_gobber": "Gobber Essence",
+  "item.horde-resource-crops.modded.essence_gobber_end": "End Gobber Essence",
+  "item.horde-resource-crops.modded.essence_gobber_nether": "Nether Gobber Essence",
   "comment4": "Mixes",
   "item.horde-resource-crops.vanilla.mix_chicken": "Chicken Mix",
   "item.horde-resource-crops.vanilla.mix_cow": "Cow Mix",
